objects/revcult__Dismissal__c.object
<CustomObject>
    <description>Represents dismissed entities across OwnBackup products.</description>
    <fields>
        <fullName>revcult__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if this Dismissal will be respected by OwnBackup products.</description>
        <inlineHelpText>Is this Dismissal Active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A way to set aside Dismissals that you don&apos;t want to report on and don&apos;t want to fully delete.</description>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__Component_Key__c</fullName>
        <description>A key for a Security insights component which we are dismissing from scoring</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Component Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Component_Label__c</fullName>
        <description>Label representing the Security Insights component that has been dismissed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Component Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Component_Row_Key__c</fullName>
        <description>A key for a row in a Security Insights component which we want to dismiss from scoring</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Component Row Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Component_Row_Label__c</fullName>
        <description>Label representing a specific row of a Security Insights component which has been dismissed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Component Row Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Reason__c</fullName>
        <description>The reason that will be documented as the impetuous for dismissing this entity</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Why do we want to dismiss this entity?</inlineHelpText>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <label>Dismissal</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Dismissal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dismissals</pluralLabel>
    <recordTypes>
        <fullName>revcult__PEA_Exclusion</fullName>
        <active>true</active>
        <label>PEA Exclusion</label>
    </recordTypes>
    <recordTypes>
        <fullName>revcult__Security_Insights_Component</fullName>
        <active>true</active>
        <description>A Security Insights dashboard component</description>
        <label>Security Insights Component</label>
    </recordTypes>
    <recordTypes>
        <fullName>revcult__Security_Insights_Component_Row</fullName>
        <active>true</active>
        <description>A specific row in a Security Insights dashboard component</description>
        <label>Security Insights Component Row</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>